--- a/slideshow.css
+++ b/slideshow.css
@@ -7,7 +7,7 @@ img {vertical-align: middle;}
 .slideshow-container {
   max-width: 1920px;
   max-height:600px;
-  position: fixed;
+  position:relative;
   margin: auto;
 }
 
