--- a/navbar.css
+++ b/navbar.css
@@ -15,7 +15,7 @@
     text-align: center;
     padding: 30px 30px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
     font-family:Microsoft YaHei UI;
   }
   
@@ -23,6 +23,7 @@
   .topnav a:hover {
     background-color: #221f1f;
     color: white;
+    opacity:80%;
   }
   
   /* Add a color to the active/current link */
@@ -36,4 +37,10 @@
     position: absolute;
     top: 680px;
     left: 50%;
+}
+
+.navimg{
+    height:70px;
+    padding-left: 40px;
+    padding-top: 10px;
 }
