--- a/slideshow.css
+++ b/slideshow.css
@@ -22,6 +22,7 @@ img {vertical-align: middle;}
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  position:relative;
 }
 
 .active, .dot:hover {
