--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     line-height: 200%;
     position: absolute;
     top:700px;
+    position:absolute;
 }
 
 .whoim{
@@ -12,6 +13,7 @@
     margin-left: 80px;
     width:300px;
     height:300px;
+    
 
 }
 
