--- a/style.css
+++ b/style.css
@@ -48,3 +48,47 @@
   .signbutton:hover {
     background-color: #f1f1f1;
   }
+
+  .para01{
+    margin-top: 50px;
+    width: 1000px;
+    text-align: center;
+    color: rgb(99, 99, 99);
+    font-size: x-large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.card1-cont{
+  margin-top: 50px;
+  display: flex;
+}
+.card1 {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 25%;
+  margin-left: 6%;
+  border-radius: 5px;
+  background-color: rgb(245, 245, 245);
+  text-align: center;
+}
+
+.card1:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card1-img {
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.card1-title{
+    color: rgb(37, 37, 37);
+    font-weight:bold;
+}
+.crd1-p{
+    
+  color: rgb(78, 78, 78);
+}
