--- a/action.css
+++ b/action.css
@@ -11,12 +11,15 @@ h1 {
 h3{
     font-size: 70px;
 }
+
+/*
 body {
-    /* edit body*/
+    
     line-height: 1.6em;
     font-family: sans-serif;
     margin:100px;
 }
+*/
 
 .box-a{
     /*targets in red color boxes*/
