--- a/action.css
+++ b/action.css
@@ -1,10 +1,11 @@
 h1 {
     /* title*/
     text-transform: uppercase;
-    line-height: 5.5em;
+    line-height: 6.5em;
     font-family: sans-serif;
     font-size: 60px;
     font: weight 500px; 
+    
 }
 
 
@@ -55,3 +56,7 @@ a:active{
 
 }
 
+.para{
+    margin-left: 3em;
+    margin-right: 2em;
+}
