--- a/action.css
+++ b/action.css
@@ -3,14 +3,26 @@ h1 {
     text-transform: uppercase;
     line-height: 6.5em;
     font-family: sans-serif;
-    font-size: 60px;
-    font: weight 500px; 
+    font-size: 70px;
+    font: weight 700px; 
+    
+}
+
+.introp{
+    font-family: sans-serif;
     
 }
 
 
+
 h3{
+    font-size: 80px;
+    text-transform: uppercase;
+    font-family: sans-serif;
     font-size: 70px;
+    font: weight 1500px; 
+   
+
 }
 
 /*
@@ -59,6 +71,8 @@ a:active{
 .para{
     margin-left: 3em;
     margin-right: 2em;
+    font-family: sans-serif;
+    font-size: large;
 }
 
 
