--- a/action.css
+++ b/action.css
@@ -82,3 +82,44 @@ hr{
     background-color:lightgray ;
     
 }
+
+/*use flex to show the list horizontally*/
+
+.project-counter-wrp ul{
+    list-style-type: none;
+    display:flex
+}
+
+.project-counter-wrp ul li {
+    width:44.44% ;
+    height: 500% ;
+    padding: 70px  0px;
+    text-align: center;
+    transition: 0.2s line;
+
+}
+
+.project-counter-wrp ul li:hover{
+    transform: scale(1.1);
+
+}
+
+.project-counter-wrp ul li:nth-child(1){
+    background:rgb(182, 25, 25)
+}
+
+.project-counter-wrp ul li:nth-child(2){
+    background:rgb(196, 28, 28)
+}
+
+.project-counter-wrp ul li:nth-child(3){
+    background:rgb(206, 29, 35)
+}
+
+.project-counter-wrp ul li p.number{
+    font-size: 50px;
+    padding: 0;
+    font-weight: bold;
+
+}
+
