--- a/action.css
+++ b/action.css
@@ -90,12 +90,14 @@ hr{
     display:flex
 }
 
+
+/*size*/
 .project-counter-wrp ul li {
-    width:44.44% ;
-    height: 500% ;
-    padding: 70px  0px;
+    width:33.33% ;
+    height: 100% ;
+    padding:  30px  0px;
     text-align: center;
-    transition: 0.2s line;
+    transition: 0.2s linear;
 
 }
 
@@ -104,6 +106,7 @@ hr{
 
 }
 
+/*box colors*/
 .project-counter-wrp ul li:nth-child(1){
     background:rgb(182, 25, 25)
 }
@@ -117,9 +120,37 @@ hr{
 }
 
 .project-counter-wrp ul li p.number{
-    font-size: 50px;
+    font-size: 40px;
     padding: 0;
     font-weight: bold;
 
 }
+
+.project-counter-wrp ul li p{
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 18px
+   
+    
+
+}
+
+.project-counter-wrp ul li  span{
+  width:60px ;
+  background: rgba(255, 255, 255, 0.8);
+  height: 2px;
+  display: block;
+  margin: 0 auto;
+
+
+}
+
+
+.project-counter-wrp ul li i {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 50px
+    
+
+}
+    
+
 
