--- a/slideshow.css
+++ b/slideshow.css
@@ -1,5 +1,5 @@
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+
 .mySlides {display: none}
 img {vertical-align: middle;}
 
@@ -10,6 +10,13 @@ img {vertical-align: middle;}
   position:relative;
   margin: auto;
 }
+
+.slide-container {
+  max-width: 1920px;
+  position:relative;
+  margin: auto;
+}
+
 
 
 /* The dots/bullets/indicators */
@@ -58,4 +65,32 @@ img {vertical-align: middle;}
     position: absolute;
     bottom: 0;
     left: 50%;
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
