--- a/donations.css
+++ b/donations.css
@@ -16,6 +16,7 @@ body{
     text-align: center;
     color: rgb(209, 55, 55);
     font-weight: bold;
+    font-size: 40px;
 }
 .para01{
     margin-top: 50px;
