--- a/aboutus.css
+++ b/aboutus.css
@@ -261,6 +261,7 @@ body{
 	text-align: center;
 	background-color: #fff;
 	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+	position:relative;
 }
 
 .left{
