--- a/aboutus.css
+++ b/aboutus.css
@@ -1,4 +1,3 @@
-
 *{
 	margin:0px;
 	padding:0px;
@@ -43,23 +42,7 @@
 	font-size: 19px;
 	line-height: 1.5;
 }
-.content-section .content .button{
-	margin-top: 30px;
-    
-}
-.content-section .content .button a{
-	background-color: #3d3d3d;
-	padding:12px 40px;
-	text-decoration: none;
-	color:#fff;
-	font-size: 25px;
-	letter-spacing: 1.5px;
-}
-.content-section .content .button a:hover{
-	background-color: #a52a2a;
-	color:rgb(255, 255, 255);
-    transition: 390ms;
-}
+
 
 @media screen and (max-width: 768px){
 	.container{
@@ -91,18 +74,6 @@
 	font-size: 19px;
 }
 
-.content-section .content .button{
-	text-align: center;
-}
-
-.content-section .content .button a{
-	padding:9px 30px;
-}
-
-.content-section .social{
-	text-align: center;
-}
-
 .title1 {
     
     margin-top: 1000px;
@@ -115,118 +86,6 @@
 	height: fit-content;
 }
 
-.team .tm {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 60px;
-    position: absolute;
-    margin-left: 570px;
-    margin-top: 20px;
-    font-weight: 100;
-    font-family:initial;
-}
-
-.p1 {
-    position: absolute;
-    height: 300px;
-    border-radius: 60%;
-    margin-left: 0px;
-    margin-top: 170px;
-}
-.p2 {
-    position: absolute;
-    height: 300px;
-    border-radius: 60%;
-    margin-left: 310px;
-    margin-top: 170px;
-}
-.p3 {
-    position: absolute;
-    height: 300px;
-    border-radius: 60%;
-    margin-left: 620px;
-    margin-top: 170px;
-}
-.p4 {
-    position: absolute;
-    height: 300px;
-    border-radius: 60%;
-    margin-left: 930px;
-    margin-top: 170px;
-}
-.p5 {
-    position: absolute;
-    height: 300px;
-    border-radius: 60%;
-    margin-left: 1240px;
-    margin-top: 170px;
-}
-.img1 {
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	margin-top: 550px;
-	margin-left: 100px;
-	
-}
-.img2 {
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	margin-top: 550px;
-	margin-left: 200px;
-	
-}
-.img3 {
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	margin-top: 550px;
-	margin-left: 300px;
-	
-}
-.img4 {
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	margin-top: 550px;
-	margin-left: 1025px;
-	
-}
-.img5 {
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	margin-top: 550px;
-	margin-left: 1365px;
-	
-}
-
-.contact {
-    text-align: center;
-    margin-top: 600px;
-    margin-left: 0px;
-    position: absolute;
-    font-family: 'Cambria';
-    font-size: 50px;
-
-}
-
-.cont {
-	height: 500px;
-	width: 500px;
-	background-color: rgb(255, 255, 255);
-	position: absolute;
-	margin-left: 1000px;
-	margin-top: 740px;
-	border-radius: 20px;
-}
-
-
-body{
-	height: 100vh;
-	width: 100%;
-}
 
 .container1{
 	position: absolute;
@@ -261,7 +120,8 @@ body{
 	text-align: center;
 	background-color: #fff;
 	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
-	position:relative;
+  position: relative;
+  margin-left: 350px;
 }
 
 .left{
@@ -341,16 +201,6 @@ textarea{
 	}
 }
 
-.cp {
-	text-align: left;
-	font-size: 30px;
-	font-family:'Arial Narrow';
-}
-
-.con {
-	text-align: center;
-}
-
 .contact-info{
 	display: flex;
 	width: 1000px;
@@ -362,7 +212,7 @@ textarea{
 	margin-left: 260px;
   }
   
-  
+ 
 .card{
 	background: #5b7186;
 	padding: 0 20px;
@@ -392,30 +242,50 @@ textarea{
 	background: none;
 	color: #df400f;
 	transform: scale(1.6);
-  }
+}
+
+.button01 {
+	  width:40px;
+	  height:50px;
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #B90E0A;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  max-width:150px;
+  align-content:center;
   
-.card p{
-	margin-top: 20px;
-	font-weight: 300;
-	letter-spacing: 2px;
-	max-height: 0;
-	opacity: 0;
-	transition: 0.3s linear;
-  }
-  
-.card:hover p{
-	max-height: 40px;
-	opacity: 1;
-  }
-  
-  
-@media screen and (max-width:800px) {
-	.contact-info{
-	  flex-direction: column;
-	}
-	.card{
-	  width: 100%;
-	  max-width: 300px;
-	  margin: 10px 0;
-	}
-  }
+}
+
+.button01:hover {
+  background-color: #555;
+}
+
+.h33{
+	font-weight: bold;
+	font-size:36px;
+	color:gray;
+	text-align:center;
+}
+
+.space{
+	margin-left: 80px;
+	margin-right: 80px;
+}
+
+.card2 {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 25%;
+  margin-left: 40px;
+  border-radius: 8px;
+  background-color: rgb(245, 245, 245);
+  text-align: center;
+}
